[package]
name = "app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open", "test"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.103"
dotenvy = "0.15.7"
anyhow = "1.0.72"
thiserror = "1.0.43"
time = "0.3.23"
sea-orm = { version = "0.11.3", features = ["with-time", "sqlx-sqlite", "runtime-tokio-rustls", "sqlx"] }
entity = { path = "../entity" }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
