[package]
name = "app"
version = "0.0.0"
description = "A Tauri App"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "test"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"
dotenvy = "0.15.7"
anyhow = "1.0.95"
thiserror = "2.0.11"
time = "0.3.37"
sea-orm = { version = "1.1.4", features = ["with-time", "sqlx-sqlite", "runtime-tokio-rustls", "sqlx", "mock"] }
entity = { path = "../entity" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
sqlx = "0.8.2"
tauri-plugin-shell = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tokio = { version = "1.43.0", features = ["rt", "test-util", "macros"] }
